{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 59,
  "lineage": "aa68ad98-e815-5989-e380-3af26e62e4ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skmt_jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b9b17384f68fd7c",
            "arn": "arn:aws:ec2:sa-east-1:924309154876:instance/i-08266cc64fc3bf40c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SKMT-EC2-Role",
            "id": "i-08266cc64fc3bf40c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "esakamoto-aws3-sp-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb453439ea0baaa2",
            "private_dns": "ip-10-0-1-71.sa-east-1.compute.internal",
            "private_ip": "10.0.1.71",
            "public_ip": "54.94.102.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bef72e53e179d646",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0869c5457521c2a23",
            "tags": {
              "Name": "SKMT-JENKINS-Server",
              "SKMT-SystemManager": "true"
            },
            "tags_all": {
              "Name": "SKMT-JENKINS-Server",
              "SKMT-SystemManager": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03255cec42b18c137"
            ]
          },
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_subnet.skmt_public_subnet",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smkt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:internet-gateway/igw-0e41e0e2817bf2bb3",
            "id": "igw-0e41e0e2817bf2bb3",
            "owner_id": "924309154876",
            "tags": {
              "Name": "smkt_igw"
            },
            "tags_all": {
              "Name": "smkt_igw"
            },
            "vpc_id": "vpc-01eb6cf3718c28e89"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skmt_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e41e0e2817bf2bb3",
            "id": "r-rtb-0f7d60e695b802eae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7d60e695b802eae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.smkt_igw",
            "aws_route_table.skmt_route_table",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skmt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:route-table/rtb-0f7d60e695b802eae",
            "id": "rtb-0f7d60e695b802eae",
            "owner_id": "924309154876",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "skmt_route_table"
            },
            "tags_all": {
              "Name": "skmt_route_table"
            },
            "vpc_id": "vpc-01eb6cf3718c28e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdd09f216780053d",
            "route_table_id": "rtb-0f7d60e695b802eae",
            "subnet_id": "subnet-0869c5457521c2a23"
          },
          "dependencies": [
            "aws_route_table.skmt_route_table",
            "aws_subnet.skmt_public_subnet",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:security-group/sg-03255cec42b18c137",
            "description": "Security Group for SKMT VPC",
            "egress": [],
            "id": "sg-03255cec42b18c137",
            "ingress": [],
            "name": "skmt_sg",
            "name_prefix": "",
            "owner_id": "924309154876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skmt_sg"
            },
            "tags_all": {
              "Name": "skmt_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eb6cf3718c28e89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-810332443",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03255cec42b18c137",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1112911785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03255cec42b18c137",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skmt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:subnet/subnet-0869c5457521c2a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0869c5457521c2a23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_public_subnet"
            },
            "tags_all": {
              "Name": "skmt_public_subnet"
            },
            "vpc_id": "vpc-01eb6cf3718c28e89"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skmt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:vpc/vpc-01eb6cf3718c28e89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0019213c3497b7361",
            "default_route_table_id": "rtb-06192afdc0cfb0807",
            "default_security_group_id": "sg-0f7d2dbcce0e8c5dc",
            "dhcp_options_id": "dopt-15316b72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01eb6cf3718c28e89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06192afdc0cfb0807",
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_vpc"
            },
            "tags_all": {
              "Name": "skmt_vpc"
            }
          }
        }
      ]
    }
  ]
}